--- a/src/app/template/sidebar/sidebar.component.html
+++ b/src/app/template/sidebar/sidebar.component.html
@@ -7,12 +7,25 @@
           <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
           Home
         </a>
+        <a class="nav-link collapsed" routerLink="/clientes-lista"
+        data-toggle="collapse" data-target="#collapseLayouts"
+        aria-expanded="false" aria-controls="collapseLayouts">
+        <div class="sb-nav-link-icon"><i class="fas fa-columns"></i></div>
+        Clientes
+      </a>
+
         <div class="sb-sidenav-menu-heading">Cadastros</div>
         <a class="nav-link collapsed" routerLink="/clientes-form"
           data-toggle="collapse" data-target="#collapseLayouts"
           aria-expanded="false" aria-controls="collapseLayouts">
           <div class="sb-nav-link-icon"><i class="fas fa-columns"></i></div>
           Clientes
+        </a>
+        <a class="nav-link collapsed" routerLink="#"
+          data-toggle="collapse" data-target="#collapseLayouts"
+          aria-expanded="false" aria-controls="collapseLayouts">
+          <div class="sb-nav-link-icon"><i class="fas fa-columns"></i></div>
+          Animes
         </a>
       </div>
     </div>
