--- a/src/app/template/sidebar/sidebar.component.html
+++ b/src/app/template/sidebar/sidebar.component.html
@@ -8,11 +8,17 @@
           Home
         </a>
         <a class="nav-link collapsed" routerLink="/clientes-lista"
-        data-toggle="collapse" data-target="#collapseLayouts"
-        aria-expanded="false" aria-controls="collapseLayouts">
-        <div class="sb-nav-link-icon"><i class="fas fa-columns"></i></div>
-        Clientes
-      </a>
+          data-toggle="collapse" data-target="#collapseLayouts"
+          aria-expanded="false" aria-controls="collapseLayouts">
+          <div class="sb-nav-link-icon"><i class="fas fa-columns"></i></div>
+          Clientes
+        </a>
+        <a class="nav-link collapsed" routerLink="/animes-lista"
+          data-toggle="collapse" data-target="#collapseLayouts"
+          aria-expanded="false" aria-controls="collapseLayouts">
+          <div class="sb-nav-link-icon"><i class="fas fa-columns"></i></div>
+          Animes
+        </a>
 
         <div class="sb-sidenav-menu-heading">Cadastros</div>
         <a class="nav-link collapsed" routerLink="/clientes-form"
@@ -21,7 +27,7 @@
           <div class="sb-nav-link-icon"><i class="fas fa-columns"></i></div>
           Clientes
         </a>
-        <a class="nav-link collapsed" routerLink="#"
+        <a class="nav-link collapsed" routerLink="/animes-form"
           data-toggle="collapse" data-target="#collapseLayouts"
           aria-expanded="false" aria-controls="collapseLayouts">
           <div class="sb-nav-link-icon"><i class="fas fa-columns"></i></div>
