--- a/src/app/animes/animes-lista/animes-lista.component.html
+++ b/src/app/animes/animes-lista/animes-lista.component.html
@@ -3,9 +3,21 @@
   <li class="breadcrumb-item active">Consulta</li>
 </ol>
 <div class="container">
+
+  <div class="row">
+    <div class="col-md-12">
+      <div class="alert alert-success" role="alert" *ngIf="mensagemSucesso">
+        {{ mensagemSucesso }}
+      </div>
+      <div class="alert alert-danger" role="alert" *ngIf="mensagemErro">
+        {{ mensagemErro }}
+      </div>
+    </div>
+  </div>
+
   <div class="row">
     <div class="col-md-2">
-      <button class="btn btn-warning" routerLink="/animes-form">
+      <button class="btn btn-warning" routerLink="/animes/form">
         <i class="fa fa-plus"></i> Novo
       </button>
     </div>
@@ -29,10 +41,40 @@
             <td>{{ anime.title }}</td>
             <td>{{ anime.episode }}</td>
             <td>{{ anime.season }}</td>
-            <td></td>
+            <td>
+              <button class="btn btn-primary" routerLink="/animes/form/{{ anime.id }}">
+                <i class="fa fa-edit"></i>
+              </button>
+
+              <button class="btn btn-danger" (click)="paraDeletar(anime)"
+                      data-toggle="modal" data-target="#modalDelecao">
+                <i class="fa fa-trash"></i>
+              </button>
+            </td>
           </tr>
         </tbody>
       </table>
     </div>
+  </div>
+
+  <div id="modalDelecao" class="modal fade" role="dialog">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h4>Confirmação</h4>
+        </div>
+
+        <div class="modal-body">
+          Deseja excluir <b>{{ animeSelecionado.title }}</b>?
+        </div>
+
+        <div class="modal-footer">
+          <button class="btn btn-success" (click)="deletarAnime()"
+                  data-dismiss="modal">Sim</button>
+          <button class="btn btn-danger" data-dismiss="modal">Não</button>
+        </div>
+      </div>
+    </div>
+
   </div>
 </div>
