--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,4 @@
 <h1 class="mt-4">Home</h1>
 <ol class="breadcrumb mb-4">
-  <li class="breadcrumb-item active">Bem vindo, Pessoa</li>
+  <li class="breadcrumb-item active">Bem vindo, {{ usuarioLogado }}</li>
 </ol>
