--- a/src/app/template/sidebar/sidebar.component.html
+++ b/src/app/template/sidebar/sidebar.component.html
@@ -33,11 +33,19 @@
           <div class="sb-nav-link-icon"><i class="fas fa-columns"></i></div>
           Animes
         </a>
+
+        <div class="sb-sidenav-menu-heading">Logout</div>
+        <a class="nav-link collapsed" (click)="logout();" href="#"
+        data-toggle="collapse" data-target="#collapseLayouts"
+        aria-expanded="false" aria-controls="collapseLayouts">
+        <div class="sb-nav-link-icon"><i class="fas fa-sign-out-alt"></i></div>
+        Sair
+      </a>
       </div>
     </div>
     <div class="sb-sidenav-footer">
-      <div class="small">Logged in as:</div>
-      User
+      <div class="small">Perfil de:</div>
+      {{ usuarioLogado }}
     </div>
   </nav>
 </div>
