--- a/src/app/template/sidebar/sidebar.component.html
+++ b/src/app/template/sidebar/sidebar.component.html
@@ -20,19 +20,19 @@
           Animes
         </a>
 
-        <div class="sb-sidenav-menu-heading">Cadastros</div>
+        <!-- <div class="sb-sidenav-menu-heading">Cadastros</div> -->
         <!-- <a class="nav-link collapsed" routerLink="/clientes-form"
           data-toggle="collapse" data-target="#collapseLayouts"
           aria-expanded="false" aria-controls="collapseLayouts">
           <div class="sb-nav-link-icon"><i class="fas fa-columns"></i></div>
           Clientes
         </a> -->
-        <a class="nav-link collapsed" routerLink="/animes/form"
+        <!-- <a class="nav-link collapsed" routerLink="/animes/form"
           data-toggle="collapse" data-target="#collapseLayouts"
           aria-expanded="false" aria-controls="collapseLayouts">
           <div class="sb-nav-link-icon"><i class="fas fa-columns"></i></div>
           Animes
-        </a>
+        </a> -->
 
         <div class="sb-sidenav-menu-heading">Logout</div>
         <a class="nav-link collapsed" (click)="logout();" href="#"
