--- a/src/app/animes/animes-lista/animes-lista.component.html
+++ b/src/app/animes/animes-lista/animes-lista.component.html
@@ -1,6 +1,6 @@
 <h1 class="mt-4">Animes</h1>
 <ol class="breadcrumb mb-4">
-  <li class="breadcrumb-item active">Consulta</li>
+  <li class="breadcrumb-item active">Lista de Animes</li>
 </ol>
 <div class="container">
 
